# slurm-api-client

./: pyproject.toml
src/slurm_client/: __init__.py
src/slurm_client/slurm/: __init__.py  api_client.py  models.py
src/slurm_client/slurm/api/: openapi_api.py  slurm_api.py
src/slurm_client/slurm/docs/: OpenapiApi.md  SlurmApi.md  V0036Diag.md  V0036DiagStatistics.md  V0036Error.md  V0036JobProperties.md  V0036JobResources.md  V0036JobResponseProperties.md  V0036JobSubmission.md  V0036JobSubmissionResponse.md  V0036JobsResponse.md  V0036Node.md  V0036NodeAllocation.md  V0036NodesResponse.md  V0036Partition.md  V0036PartitionsResponse.md  V0036Ping.md  V0036Pings.md  V0036Signal.md
src/slurm_client/slurmdb/: __init__.py  api_client.py  models.py
src/slurm_client/slurmdb/api/: openapi_api.py  slurm_api.py
src/slurm_client/slurmdb/docs/: Dbv0036Account.md  Dbv0036AccountInfo.md  Dbv0036AccountResponse.md  Dbv0036Association.md  Dbv0036AssociationDefault.md  Dbv0036AssociationMax.md  Dbv0036AssociationMaxJobs.md  Dbv0036AssociationMaxJobsPer.md  Dbv0036AssociationMaxPer.md  Dbv0036AssociationMaxPerAccount.md  Dbv0036AssociationMaxTres.md  Dbv0036AssociationMaxTresMinutes.md  Dbv0036AssociationMaxTresMinutesPer.md  Dbv0036AssociationMaxTresPer.md  Dbv0036AssociationMin.md  Dbv0036AssociationShortInfo.md  Dbv0036AssociationUsage.md  Dbv0036AssociationsInfo.md  Dbv0036ClusterInfo.md  Dbv0036ClusterInfoAssociations.md  Dbv0036ClusterInfoController.md  Dbv0036ConfigInfo.md  Dbv0036ConfigResponse.md  Dbv0036CoordinatorInfo.md  Dbv0036Diag.md  Dbv0036DiagRPCs.md  (+75 more)
