[tool.poetry]
name = "slurm-client"
version = "0.1.0"
description = ""
authors = ["Robert Rosca"]
readme = "README.md"
packages = [{include = "slurm_client", from = "src"}]

[tool.poetry.dependencies]
python = "^3.9"
httpx = "^0.20.0"
pydantic = "^1.8.2"
fastapi = "^0.70.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
